Almost SSO support but rebble doesnt worko rip

--- a/cloudpebble/ide/templates/ide/project.html
+++ b/cloudpebble/ide/templates/ide/project.html
@@ -17,7 +17,7 @@
 <link rel="stylesheet" href="{{ font_css }}" />
 {% endif %}
 <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Droid+Serif:700|Roboto+Condensed|Roboto:700">
-<link rel="stylesheet" href="//192.168.99.100/static.cloudpebble.net/fonts/raster-gothic/stylesheet.css">
+<link rel="stylesheet" href="//192.168.99.100/static/ide/css/raster-gothic.css">
 
 <link rel="stylesheet" href="{%  static 'jquery-textext/src/css/textext.core.css' %}" type="text/css" />
 <link rel="stylesheet" href="{%  static 'jquery-textext/src/css/textext.plugin.tags.css' %}" type="text/css" />
