here I go again on my own. Down the only road I've ever known.

--- a/cloudpebble/ide/static/ide/css/ide.css
+++ b/cloudpebble/ide/static/ide/css/ide.css
@@ -88,7 +88,7 @@ ul.nav-pills {
 /* Main content */
 
 #pane-parent {
-    background: #333333 url('../img/background-logo.png') no-repeat center;
+    background: #1f1f36 url('../img/background-logo.png') no-repeat center;
     position: absolute;
     top: 0;
     left: 285px;
@@ -97,7 +97,7 @@ ul.nav-pills {
 }
 
 #main-pane {
-    background: #333333;
+    background: #1f1f36;
     position: absolute;
     top: 0;
     bottom: 0;
@@ -115,7 +115,7 @@ ul.nav-pills {
 
 .nav-list .active {
     color: white;
-    background-color: #333333;
+    background-color: #1f1f36;
 }
 
 .nav-list li.nav-section {
@@ -135,7 +135,7 @@ ul.nav-pills {
 
 .nav-list .project-name {
     color: #adadad;
-    border: 2px solid #333333;
+    border: 2px solid #1f1f36;
     display: inline-block;
     border-radius: 5px;
     padding: 4px 15px 2px;
