--- a/cloudpebble/ide/templates/ide/index.html
+++ b/cloudpebble/ide/templates/ide/index.html
@@ -167,7 +167,10 @@
                     <div class="control-group">
                         <label class="control-label" for="import-github-url">{% trans "GitHub Project" %}</label>
                         <div class="controls">
-                            <input class="span4" type="text" id="import-github-url" placeholder="github.com/Katharine/pebble-stopwatch" pattern="(https?://)?(www\.)?github.com/.+/.+">
+                            <input class="span4" type="text"
+id="import-github-url"
+placeholder="github.com/gfunkmonk/AlternatingTidbits"
+pattern="(https?://)?(www\.)?github.com/.+/.+">
                         </div>
                     </div>
                     <div class="control-group">
