--- a/cloudpebble/ide/templates/ide/project.html
+++ b/cloudpebble/ide/templates/ide/project.html
@@ -596,7 +596,8 @@ var REGEXES = _.mapObject(JSON.parse('{{regexes_json|escapejs}}'), function(v) {
 <script src="{% static 'ide/js/libpebble/libpebble.js' %}" type="text/javascript"></script>
 <script src="{% static 'ide/js/crash_handler.js' %}" type="text/javascript"></script>
 <script src="{% static 'ide/js/pebble.js' %}" type="text/javascript"></script>
-<script src="{% static 'ide/js/analytics.js' %}" type="text/javascript"></script>
+<script src="{% static 'ide/js/badbad.js' %}"
+type="text/javascript"></script>
 <script src="{% static 'ide/js/documentation.js' %}" type="text/javascript"></script>
 <script src="{% static 'ide/js/qemu.js' %}" type="text/javascript"></script>
 <script src="{% static 'ide/js/ib/ib.js' %}" type="text/javascript"></script>
