--- a/cloudpebble/root/templates/root/index.html
+++ b/cloudpebble/root/templates/root/index.html
@@ -19,10 +19,10 @@
             <div class="box-holder">
                 <div class="box">
                     {% if sso_root %}
-                    <h3>{% trans "Already have a Pebble account?" %}</h3>
-                    <p>{% trans "This is the same account you use to log in to the Pebble Forums, Developer Portal and phone app. Don't have a Pebble account? Create one!" %}</p>
-                    <p><a class="btn btn-primary" href="/login/pebble/?next={{ next }}">{% trans "Log in with your Pebble account" %}</a></p>
-                    <p><a class="btn" href="{{ sso_root }}/users/sign_up">{% trans "Create Pebble account" %}</a></p>
+                    <h3>{% trans "Already have a Rebble account?" %}</h3>
+                    <p>{% trans "This is the same account you use to log in to the phone app. Don't have a Rebble account? Create one!" %}</p>
+                    <p><a class="btn btn-primary" href="/login/pebble/?next={{ next }}">{% trans "Log in with your Rebble account" %}</a></p>
+                    <p><a class="btn" href="http://rebble.io/">{% trans "Create Rebble account" %}</a></p>
                     {% else %}
                     {# This doesn't show up in production so isn't worth translating. #}
                     <h3>This build is running without SSO support</h3>
@@ -33,13 +33,10 @@
                     {% endif %}
                 </div>
                 <div class="box">
-                    <h3>{% trans "Have a legacy CloudPebble account?" %}</h3>
-                    <p>{% blocktrans %}Log in to link it with your Pebble account. Legacy
-accounts are being phased out in favour of the
-Pebble account system. Once you log in you will be
-required to link your accounts;
-henceforth you must log in with your pebble account.{% endblocktrans %}</p>
-                    <p><button class="btn" id="legacy-trigger-btn">{% trans "Link to your Pebble account" %}</button></p>
+                    <h3>{% trans "This is fancy devel stuff!!" %}</h3>
+                    <p>{% trans "you probably don't need any of this. Unless your heart is just totally set on having a local account on my server. In that case <strong>be my guest!</strong>" %}</p>
+                    <p class="text-center"><a href="/accounts/register" class="btn btn-primary" style="width: 300px;">{% trans "Create Local Account" %}</a></p>
+                    <p class="text-center"><a href="/accounts/login" class="btn" style="width: 300px;">{% trans "Login to Local Account" %}</a></p>
                 </div>
             </div>
         </div>
